--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.10.2",
     "@babel/plugin-transform-block-scoping": "^7.10.1",
     "@babel/plugin-transform-classes": "^7.10.1",
-    "@babel/plugin-transform-template-literals": "^7.10.1"
+    "@babel/plugin-transform-template-literals": "^7.10.1",
+    "@babel/preset-env": "^7.10.2"
   }
 }
