--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["@babel/env"]
+  "presets": [[
+    "@babel/env",
+    {
+      "targets": {
+        "edge": "18",
+        "chrome": "74"
+      }
+    }
+  ]],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
