--- a/.babelrc
+++ b/.babelrc
@@ -2,10 +2,12 @@
   "presets": [[
     "@babel/env",
     {
-      "targets": {
-        "edge": "18",
-        "chrome": "74"
-      }
+      "debug": true,
+      "targets": [
+        "last 2 chrome versions",
+        "last 2 firefox versions",
+        "last 2 ios versions"
+      ]
     }
   ]],
   "plugins": ["@babel/plugin-proposal-class-properties"]
