--- a/.babelrc
+++ b/.babelrc
@@ -2,12 +2,7 @@
   "presets": [[
     "@babel/env",
     {
-      "debug": true,
-      "targets": [
-        "last 2 chrome versions",
-        "last 2 firefox versions",
-        "last 2 ios versions"
-      ]
+      "debug": true
     }
   ]],
   "plugins": ["@babel/plugin-proposal-class-properties"]
