--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,8 @@
       "debug": true,
       "modules": false
     }
-  ]],
+  ],
+    "@babel/react"
+  ],
   "plugins": ["@babel/plugin-proposal-class-properties"]
 }
